kub2/deploy-pacman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pacman
  name: pacman
  namespace: pacman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pacman
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: ghcr.io/netcanog/pacman:1.0
        name: pacman
        resources:
          requests:
            cpu: 1m
        ports:
        - containerPort: 80
status: {}
